# dash-ai-chat

./: README.md  pyproject.toml
examples/: 00_minimal_chat.py  03_responses_provider.py  04_signature_chat.py  05_interactive_components.py  06_inspect_providers.py  10_generate_speech.py  11_generate_speech_advanced.py  README.md
src/dash_ai_chat/: __init__.py  dash_ai_chat.py  providers.py
tests/: test_dash_ai_chat.py
