[project]
name = "dash-ai-chat"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elias Dabbas", email = "eliasdabbas@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
