[project]
name = "dash-ai-chat"
version = "0.0.3"
description = "A customizable LLM chat UI framework built on Plotly Dash"
readme = "README.md"
authors = [
    { name = "Elias Dabbas", email = "eliasdabbas@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
]

[project.optional-dependencies]
openai = [
    "openai>=1.97.1",
]
gemini = [
    "google-genai>=1.29.0",
    "google-generativeai>=0.8.0",
]
anthropic = [
    "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
